# NelderMead_dll

./: .gitignore  CMakeFile.txt  CMakeLists.txt  Doc.md  Doxyfile  README.md
build_x64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  NelderMead.vcxproj  NelderMead.vcxproj.filters  NelderMead_DLL.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_x64/NelderMead.dir/Release/: NelderMead.dll.recipe
build_x64/NelderMead.dir/Release/NelderMead.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_x64/Release/: NelderMead.exp  NelderMead.lib
build_x64/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_x64/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
build_x64/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_x64/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
dll/: CMakeLists.txt
dll/include/: dll_api.h  expression_tree.h
dll/src/: expression_tree.cpp  node_classes.cpp
docs/: index.md
docs/html/: _checking__func_8cpp.html  _checking__func_8cpp__incl.dot  _checking__func_8cpp__incl.map  _checking__func_8cpp__incl.md5  _checking__func_8cpp_a2e0c6ecacfe178985b7c9425cbe790bb_cgraph.dot  _checking__func_8cpp_a2e0c6ecacfe178985b7c9425cbe790bb_cgraph.map  _checking__func_8cpp_a2e0c6ecacfe178985b7c9425cbe790bb_cgraph.md5  _checking__func_8cpp_a2e0c6ecacfe178985b7c9425cbe790bb_icgraph.dot  _checking__func_8cpp_a2e0c6ecacfe178985b7c9425cbe790bb_icgraph.map  _checking__func_8cpp_a2e0c6ecacfe178985b7c9425cbe790bb_icgraph.md5  _checking__func_8cpp_aab6ac7fbd9f032e4f54abe24a459a6fd_icgraph.dot  _classes_8cpp.html  _classes_8cpp__incl.dot  _classes_8cpp__incl.map  _classes_8cpp__incl.md5  _classes_8h.html  _classes_8h__dep__incl.dot  _classes_8h__dep__incl.map  _classes_8h__dep__incl.md5  _classes_8h__incl.dot  _classes_8h__incl.map  _classes_8h__incl.md5  _classes_8h_source.html  _create__tree_8cpp.html  _create__tree_8cpp__incl.dot  _create__tree_8cpp__incl.map  _create__tree_8cpp__incl.md5  _d_1_2_xD0_xA0_xD0_xB0_xD0_xB1_xD0_xBE_xD1_x87_xD0_xB8_xD0_xB9_01_xD1_x81_xD1_x82_xD0_xBE_xD0_xBdc483a4913a60b018bd037aac716760a.html  _doc_8md.html  _infen__expr__to__rpn_8cpp.html  _infen__expr__to__rpn_8cpp__incl.dot  _infen__expr__to__rpn_8cpp__incl.map  _infen__expr__to__rpn_8cpp__incl.md5  _infen__expr__to__rpn_8cpp_a8d582cbca6a67337e72be9fb36b71483_cgraph.dot  _infen__expr__to__rpn_8cpp_a8d582cbca6a67337e72be9fb36b71483_cgraph.md5  _infen__expr__to__rpn_8cpp_a8d582cbca6a67337e72be9fb36b71483_icgraph.md5  _internal__func_8h.html  _internal__func_8h__dep__incl.dot  _internal__func_8h__dep__incl.map  _internal__func_8h__dep__incl.md5  (+140 more)
include/: Classes.h  Internal_func.h  NelderMead.h  TreeClasses.h  Tree_classes.h  classes.h  core_api.h  expression_tree.h  ifunction.h  internal_func.h  ipoint.h  nelder_mead_method.h  node_classes.h  point.h  simplex.h  simplex_history.h
include_response/: response_class.h  response_core_api.h
src/: Build_tree.cpp  Checking_func.cpp  Classes.cpp  Create_tree.cpp  Infen_expr_to_rpn.cpp  NelderMead.cpp  Operators_func.cpp  Parser.cpp  Rpn_expr_to_tree.cpp  TreeClasses.cpp  Tree_classes.cpp  classes.cpp  core_api.cpp  create_tree.cpp  expression_tree.cpp  infen_expr_to_rpn.cpp  internal_func.cpp  ipoint.cpp  nelder_mead_method.cpp  node_classes.cpp  operators_func.cpp  point.cpp  rpn_expr_to_tree.cpp  simplex.cpp  simplex_history.cpp
src_response/: response_class.cpp  response_core_api.cpp
wrapper_cli/: CMakeLists.txt  README.md  manager_expression_tree.cpp  manager_expression_tree.h
